--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "author": "Jascha Ehrenreich <jascha@jaeh.at>",
   "license": "AGPL",
   "main": "index.js",
-  "scripts": {
-    "clean": "bin/clean",
-    "prepub": "bin/build",
-    "test": "bin/build && bin/test"
-  },
   "devDependencies": {
-    "babel": "^4.7.16",
-    "chai": "^2.2.0",
-    "mocha": "^2.2.1"
+    "babel": "4.7.16",
+    "babel-eslint": "5.0.0",
+    "chai": "2.3.0",
+    "eslint": "2.3.0",
+    "eslint-plugin-standard": "1.3.2",
+    "eslint-plugin-tdd": "0.5.0",
+    "estraverse-fb": "1.3.1",
+    "mocha": "2.4.5"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/express-magic/magic-types"
+    "url": "https://github.com/magic/types"
   },
   "bugs": {
-    "url": "https://github.com/express-magic/magic-types/issues"
+    "url": "https://github.com/magic/types/issues"
   },
-  "homepage": "https://github.com/express-magic/magic-types"
+  "homepage": "https://github.com/magic/types"
 }
