--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "license": "AGPL-3.0",
   "main": "index.js",
   "devDependencies": {
-    "babel": "4.7.16",
+    "babel-cli": "6.6.5",
     "babel-eslint": "5.0.0",
-    "chai": "2.3.0",
-    "eslint": "2.3.0",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-stage-0": "6.5.0",
+    "chai": "3.5.0",
+    "eslint": "2.4.0",
     "eslint-plugin-standard": "1.3.2",
     "eslint-plugin-tdd": "0.5.0",
     "estraverse-fb": "1.3.1",
