--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,7 @@
     "accessor-pairs": 2,
     "arrow-spacing": [2, { "before": true, "after": true }],
     "block-spacing": [2, "always"],
-    "brace-style": [2, "1tbs", { "allowSingleLine": true }],
+    "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
     "comma-dangle": [2, "always-multiline"],
     "comma-spacing": [2, { "before": false, "after": true }],
     "comma-style": [2, "last"],
@@ -119,7 +119,7 @@
     "padded-blocks": [2, "never"],
     "quotes": [2, "single", "avoid-escape"],
     "radix": 2,
-    "semi": [2, "always"],
+    "semi": [2, "never"],
     "semi-spacing": [2, { "before": false, "after": true }],
     "keyword-spacing": [2, {"before": true, "after": true}],
     "space-before-blocks": [2, "always"],
