--- a/package.json
+++ b/package.json
@@ -6,16 +6,7 @@
   "license": "AGPL-3.0",
   "main": "index.js",
   "devDependencies": {
-    "babel-cli": "6.7.5",
-    "babel-eslint": "6.0.2",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-stage-0": "6.5.0",
-    "chai": "3.5.0",
-    "eslint": "2.7.0",
-    "eslint-plugin-standard": "1.3.2",
-    "eslint-plugin-tdd": "0.5.0",
-    "estraverse-fb": "1.3.1",
-    "mocha": "2.4.5"
+    "magic-dev": "github:magic/dev"
   },
   "repository": {
     "type": "git",
@@ -30,5 +21,11 @@
       "name": "jascha ehrenreich",
       "github": "jaeh"
     }
-  ]
+  ],
+  "ava": {
+    "babel": "inherit",
+    "require": [
+      "babel-register"
+    ]
+  }
 }
