--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "magic-types",
+  "name": "types",
   "version": "0.0.1",
   "description": "typechecking library",
   "author": "Wizards & Witches <team@wiznwit.com>",
   "license": "AGPL-3.0",
-  "main": "index.js",
-  "devDependencies": {
-    "magic-dev": "github:magic/dev"
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node test/",
+    "test": "node test/ -- -v"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,10 @@
       "github": "jaeh"
     }
   ],
-  "ava": {
-    "babel": "inherit",
-    "require": [
-      "babel-register"
-    ]
+  "devDependencies": {
+    "test": "file:../test"
+  },
+  "dependencies": {
+    "argv": "file:../argv"
   }
 }
