--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node test/",
-    "test": "node test/ -- -v"
+    "test": "VERBOSE=true node test/",
+    "coverage": "VERBOSE=true nyc -a node test/"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,6 @@
     }
   ],
   "devDependencies": {
-    "test": "file:../test"
+    "test": "../test"
   }
 }
