--- a/package.json
+++ b/package.json
@@ -15,14 +15,9 @@
   "eslintConfig": {
     "extends": "standard",
     "rules": {
-      "comma-dangle": [
-        "error",
-        "always-multiline"
-      ],
-      "brace-style": [
-        "error",
-        "stroustrup"
-      ]
+      "comma-dangle": ["error", "always-multiline"],
+      "brace-style": ["error", "stroustrup"],
+      "semi": ["error", "never"]
     }
   },
   "repository": {
