add prettier, nyc, rename test lib

--- a/package.json
+++ b/package.json
@@ -8,25 +8,11 @@
   "scripts": {
     "start": "nyc -a node test/",
     "test": "VERBOSE=true nyc -a node test/",
-    "lint": "esw -w ./src ./test",
-    "lint:fix": "eslint --fix ./src ./test"
+    "format": "prettier --write '{src,test}/**/*.js'",
+    "format:check": "prettier --list-different '{src,test}/**/*.js'"
   },
-  "eslintConfig": {
-    "extends": "standard",
-    "rules": {
-      "comma-dangle": [
-        "error",
-        "always-multiline"
-      ],
-      "brace-style": [
-        "error",
-        "stroustrup"
-      ],
-      "semi": [
-        "error",
-        "never"
-      ]
-    }
+  "prettier": {
+    "semi": false
   },
   "repository": {
     "type": "git",
@@ -37,6 +23,8 @@
   },
   "homepage": "https://github.com/magic/types",
   "devDependencies": {
-    "test": "git+http://git@localhost:7005/test"
+    "@magic/test": "github:magic/test",
+    "nyc": "11.6.0",
+    "prettier": "1.11.1"
   }
 }
