update magic/test, remove prettier config

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "license": "AGPL-3.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "nyc -a node test/",
-    "test": "npm run format:check && VERBOSE=true nyc -a node test/",
-    "format": "format --write",
-    "format:check": "format --list-different"
+    "start": "t -p",
+    "test": "t",
+    "format": "f -w",
+    "format:check": "f"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,6 @@
   },
   "homepage": "https://github.com/magic/types",
   "devDependencies": {
-    "@magic/lint": "github:magic/lint",
-    "@magic/test": "github:magic/test",
-    "nyc": "11.6.0"
+    "@magic/test": "github:magic/test"
   }
 }
