--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/magic/types",
   "devDependencies": {
     "@magic/test": "github:magic/test"
+  },
+  "dependencies": {
+    "@magic/deep": "github:magic/deep"
   }
 }
