add travis and appveyor

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "t -p",
     "test": "t",
     "format": "f -w",
-    "format:check": "f"
+    "format:check": "f",
+    "calls": "calls"
   },
   "repository": {
     "type": "git",
