--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,8 @@ install:
 cache:
   # local npm modules
   - 'node_modules -> package.json'
+  # npm cache
+  - '%APPDATA%\npm-cache'
 
 build: off
 
