--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   ],
   "homepage": "https://github.com/magic/types",
   "devDependencies": {
-    "@magic-modules/git-badges": "github:magic-modules/git-badges",
-    "@magic-modules/light-switch": "github:magic-modules/light-switch",
-    "@magic-modules/pre": "github:magic-modules/pre",
-    "@magic-themes/docs": "github:magic-themes/docs",
-    "@magic/core": "github:magic/core",
-    "@magic/test": "0.1.21"
+    "@magic-modules/gdpr": "0.0.4",
+    "@magic-modules/git-badges": "0.0.3",
+    "@magic-modules/light-switch": "0.0.2",
+    "@magic-modules/pre": "0.0.2",
+    "@magic-themes/docs": "0.0.2",
+    "@magic/core": "0.0.2",
+    "@magic/test": "0.1.23"
   }
 }
