--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "src"
   ],
   "homepage": "https://github.com/magic/types",
+  "dependencies": {
+    "@magic/deep": "0.1.1"
+  },
   "devDependencies": {
-    "@magic-modules/gdpr": "0.0.9",
+    "@magic-modules/gdpr": "0.0.12",
     "@magic-modules/git-badges": "0.0.3",
     "@magic-modules/light-switch": "0.0.3",
     "@magic-modules/pre": "0.0.2",
     "@magic-themes/docs": "0.0.2",
-    "@magic/core": "0.0.10",
+    "@magic/core": "0.0.13",
     "@magic/test": "0.1.24"
   }
 }
