--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "@magic-modules/git-badges": "0.0.3",
     "@magic-modules/light-switch": "0.0.3",
     "@magic-modules/pre": "0.0.2",
-    "@magic-themes/docs": "0.0.2",
-    "@magic/core": "0.0.14",
-    "@magic/test": "0.1.25"
+    "@magic-themes/docs": "0.0.3",
+    "@magic/core": "0.0.18",
+    "@magic/format": "0.0.2",
+    "@magic/test": "0.1.27"
   }
 }
