--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "license": "AGPL-3.0",
   "main": "src/index.mjs",
   "scripts": {
-    "start": "t -p",
+    "start": "t",
     "build": "NODE_ENV=production magic build",
     "prod": "NODE_ENV=production magic build serve",
     "clean": "magic clean",
     "serve": "magic serve",
     "dev": "magic dev",
-    "test": "t --exclude docs example config.js",
+    "test": "t",
     "format": "f -w --exclude docs",
     "format:check": "f --exclude docs",
     "calls": "calls"
