--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "src"
   ],
   "devDependencies": {
-    "@magic-modules/gdpr": "0.0.16",
     "@magic-modules/git-badges": "0.0.10",
     "@magic-modules/light-switch": "0.0.6",
     "@magic-modules/pre": "0.0.8",
@@ -52,5 +51,8 @@
       "name": "jascha ehrenreich",
       "github": "jaeh"
     }
-  ]
+  ],
+  "dependencies": {
+    "@magic-modules/no-spy": "0.0.1"
+  }
 }
