pkg: change npm run build, prepublishOnly also runs tests

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "type": "module",
   "scripts": {
     "start": "t",
-    "build": "tsc && npm run format && echo 'Types generated in dist/*'",
-    "prepublishOnly": "npm run build",
+    "build": "tsc && npm run format",
+    "prepublishOnly": "npm run test && npm run build",
     "build:docs": "NODE_ENV=production magic build",
     "prod": "NODE_ENV=production magic build serve",
     "clean": "magic clean",
